--- a/EntregaLucasBianco/pages/contacto.html
+++ b/EntregaLucasBianco/pages/contacto.html
@@ -7,29 +7,47 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400&display=swap" rel="stylesheet">
+    <!-- Link bootsptrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!--Link a mi CSS-->
     <link rel="stylesheet" href="../css/styles.css">
     <title>Contacto</title>
 </head>
 <body>
-    <header>
-        <div class="encabezadoGeneral">
-            <div>
-                <img src="../img/logo_mandalas.jpeg" alt="" class="logoEncabezado">
-            </div>
-            <div class="tituloEncabezado">
-                <h1>
-                    Mandala´s Forma y color
-                </h1>
-            </div>
-            <nav class="menuNavegacion">
-                <div class="itemsMenu"><a href="../index.html">Inicio</a></div>
-                <div class="itemsMenu"><a href="../pages/quienesSomos.html">Quiénes Somos</a></div>
-                <div class="itemsMenu"><a href="../pages/productos.html">Productos</a></div>
-                <div class="itemsMenu"><a href="../pages/trabajos.html">Trabajos</a></div>
-            </nav>
+    <header class="header d-flex justify-content-between bg-success">
+        <div>
+            <img src="../img/logo_mandalas.png" alt="logo_mandalas" class="logo_empresa">
         </div>
+        <div>
+            <h1>Mandala´s</h1>
+        </div>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon "></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="quienesSomos.html">Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="trabajos.html">Trabajos</a>
+                        </li>
+                    </ul>
     
-    
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
         <h2 class="menuItem">Contacto</h2>
@@ -126,5 +144,9 @@
         <p>Reservados todos los derechos 
             &#174 </p>
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+    </script>
 </body>
 </html>
